Update Styling to Prevent Navigation Bar Stretching

--- a/css/style.css
+++ b/css/style.css
@@ -13,12 +13,15 @@ html, body {
     color: var(--foreground-color);
     background-color: var(--background-color);
     font-family: Sono, monospace;
+
+    overflow-x: hidden;
 }
 
 nav {
     width: 100%;
     padding: 15px 30px;
     background-color: var(--background-color);
+    box-sizing: border-box;
     
     font-size: 1.5rem;
     display: flex;
